InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderTaxonomy__c/vlocity_ins__ProviderTaxonomy__c.object-meta.xml
<CustomObject>
    <description>Represents an individual service provider&apos;s specialty</description>
    <label>Provider Taxonomy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Taxonomies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>