InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderTaxonomy__c/fields/vlocity_ins__ProviderAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>ProviderLocation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provider Account Taxonomies</relationshipLabel>
    <relationshipName>ProviderAccountTaxonomies</relationshipName>
    <type>Lookup</type>
</CustomField>