InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderTaxonomy__c/fields/vlocity_ins__ProviderContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Provider Contact Taxonomies</relationshipLabel>
    <relationshipName>ProviderContactTaxonomies</relationshipName>
    <type>Lookup</type>
</CustomField>