InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderTaxonomy__c/fields/vlocity_ins__StartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>